change image/mandeep.jpeg to mandeep.jpeg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="image/mandeep.jpeg" alt="mandeep profile piture" /></td>
+        <td><img src="mandeep.jpeg" alt="mandeep profile piture" /></td>
         <td>
           <h1>Mandeep Singh💝💝</h1>
           <p><em><strong>Web developer trainee</strong> and <a href="https://indiacsr.in/tips-on-how-to-become-an-effective-engineering-student/">engineering student.</a></em></p>
