--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>Mandeep singh - a web designer</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="images/favicon-16x16.png" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon-16x16.png" />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud image">
+    <img class="top-cloud" src="cloud.png" alt="cloud image">
     <h1><em>I'm Mandeep.</em> </h1>
     <h2>a web designer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
-    <img src="images/mountain.png" alt="mountain image">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud image">
+    <img src="mountain.png" alt="mountain image">
 
 
   </div>
   <div class="middle-container">
-    <img class="profile-pic" src="images/mandeep.jpeg" alt="Mandeep's profile picture">
+    <img class="profile-pic" src="mandeep.jpeg" alt="Mandeep's profile picture">
     <h2>Hello.</h2>
     <p>I am a student and beginner in web development.
       And I 💝💝 love coffee and explore new places.</p><br />
@@ -36,12 +36,12 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="computer-image" src="images/seo.png" alt="">
+      <img class="computer-image" src="seo.png" alt="">
       <h3>Web development</h3>
       <p>Work with HTML, CSS and JAVAscript. Make own personal Website and much more.</p>
     </div>
     <div class="skill-row">
-      <img class="graphic-design" src="images/graphic-design.png" alt=""><br />
+      <img class="graphic-design" src="graphic-design.png" alt=""><br />
       <h3>Designer</h3>
       <p>Love to design create different things such as web pages layout and many more.</p>
     </div>
